# examples/todo/routes/Api/User.php
@@ -2,6 +2,10 @@
 use Illuminate\Support\Facades\Route;
 
 //use
+use App\Http\Controllers\Api\User\SearchUserController;
+
 use App\Http\Controllers\Api\User\CreateUserController;
 //route
+Route::match(array('POST', 'GET'), 'user/search', ['uses' => SearchUserController::class])->middleware(['jwt.verify']);
+
 Route::match(array('POST'), 'user/create', ['uses' => CreateUserController::class])->middleware(['jwt.verify']);
